--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am saravana, and this is my first webapp to process.
+            Hi! I am saravana, and this is my first webapp.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
