[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,7 +6,7 @@
     </head>
     <body
         <div>
-            <o href="/">Home</o>
+            <A href="/">Home</A>
         </div>
         <hr/>
         <h3>
