--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -10,7 +10,7 @@
         </div>
         <hr/>
         <h3>
-            Article one
+            article one
         </h3>
         <div>
             sep 5, 2016
