--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,7 +6,7 @@
     </head>
     <body
         <div>
-            <a href="/">Home</a>
+            <o href="/">Home</o>
         </div>
         <hr/>
         <h3>
