[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,7 +4,7 @@
             Article one 1 saravana kumar Durai
         </title>
     </head>
-    <body
+    <body>
         <div>
             <a href="/">Home</a>
         </div>
