[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -10,7 +10,7 @@
         </div>
         <hr/>
         <h3>
-            article one
+            Article one
         </h3>
         <div>
             sep 5, 2016
