--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,1 +1,25 @@
 
+<html>
+    <head>
+        <title>
+            Article two saravana kumar Durai
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            Article two
+        </h3>
+        <div>
+            sep 5, 2016
+        </div>
+        <div>
+            <p>
+                This is the content for my second article.
+            </p>
+        </div>
+    </body>
+</html>
