--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,28 +3,39 @@
         <title>
             Article one 1 saravana kumar Durai
         </title>
+        <style>
+            .container{
+                max-width: 880px;
+                margin: 0 auto;
+                color: grey;
+                font-family: sams-serif;
+            }
+            
+        </style>
     </head>
     <body>
         <div>
-            <a href="/">Home</a>
-        </div>
-        <hr/>
-        <h3>
-            Article one
-        </h3>
-        <div>
-            sep 5, 2016
-        </div>
-        <div>
-            <p>
-                This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.
-            </p>
-            <p>
-                This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.
-            </p>
-             <p>
-                This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.
-            </p>
+            <div class="container">
+                <a href="/">Home</a>
+            </div>
+            <hr/>
+            <h3>
+                Article one
+            </h3>
+            <div>
+                sep 5, 2016
+            </div>
+            <div>
+                <p>
+                    This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.
+                </p>
+                <p>
+                    This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.
+                </p>
+                 <p>
+                    This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.
+                </p>
+            </div>
         </div>
     </body>
 </html>
