--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,6 +3,7 @@
         <title>
             Article one 1 saravana kumar Durai
         </title>
+        <meta name="viewport" content="width-device-width, initial-scole=1" />
         <style>
             .container{
                 max-width: 800px;
