[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,18 +4,8 @@
             Article one 1 saravana kumar Durai
         </title>
         <meta name="viewport" content="width-device-width, initial-scole=1" />
-        <style>
-            .container{
-                max-width: 800px;
-                margin: 0 auto;
-                color: #676769;
-                font-family: sams-serif;
-                padding-top: 60px;
-                padding-left: 20px;
-                padding-right: 20px;
-            }
-            
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
+
     </head>
     <body>
         <div class="container">
