[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,6 +4,7 @@
         <title>
             Article two saravana kumar Durai
         </title>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div>
