--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -3,6 +3,7 @@
         <title>
             Article three saravana kumar Durai
         </title>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div>
