[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,21 +4,23 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="https://pbs.twimg.com/profile_images/889519318265876480/ymtqeZSr_400x400.jpg" class="img-medium"/>
+        <div class="container">
+            <div class="center">
+                <img src="https://pbs.twimg.com/profile_images/889519318265876480/ymtqeZSr_400x400.jpg" class="img-medium"/>
+                </div>
+                <hr/>
+                <br>
+                <h3>Personal</h3>
+                <div>
+                    Hi, My Name is Saravana Kumar DUrai.
+                </div>
+                <hr/>
+                <h3>Professionla</h3>
+                <div>
+                    I work at AthenaHealthcare.
+                </div>
+            <script type="text/javascript" src="/ui/main.js">
+            </script>
         </div>
-        <hr/>
-        <br>
-        <h3>Personal</h3>
-        <div>
-            Hi, My Name is Saravana Kumar DUrai.
-        </div>
-        <hr/>
-        <h3>Professionla</h3>
-        <div>
-            I work at AthenaHealthcare.
-        </div>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
     </body>
 </html>
