[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
                 <br>
                 <h3>Personal</h3>
                 <div>
-                    Hi, My Name is Saravana Kumar DUrai.
+                    Hi, My Name is Saravana Kumar Durai.
                 </div>
                 <hr/>
                 <h3>Professionla</h3>
