[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,7 +15,7 @@
                     Hi, My Name is Saravana Kumar Durai.
                 </div>
                 <hr/>
-                <h3>Professionla</h3>
+                <h3>Professional</h3>
                 <div>
                     I work at AthenaHealthcare.
                 </div>
