[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,6 +19,10 @@
                 <div>
                     I work at AthenaHealthcare.
                 </div>
+                <hr/>
+                <div class="footer">
+                    This button <button id="counter">click me!</button> has been clicked <span id="count">0</span>times.
+                </div>
             <script type="text/javascript" src="/ui/main.js">
             </script>
         </div>
