[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -23,7 +23,7 @@
                 <div class="footer">
                     This button <button id="counter">click me!</button> has been clicked <span id="count"></span> times.
                 </div>
-                <script type="text/javascript">
+                <!--<script type="text/javascript">
                 var button = document.getElementById('counter');
 var counter = 0;
 button.onclick = function () {
@@ -37,9 +37,9 @@ button.onclick = function () {
     counter = counter + 1;
     var span = document.getElementById('count');
     span.innerHTML = counter.toString();
-};</script>
-            <!--<script type="text/javascript" src="/ui/main.js">
-            </script>-->
+};</script>-->
+            <script type="text/javascript" src="/ui/main.js">
+            </script>
         </div>
     </body>
 </html>
